--- a/.github/workflows/supabase-heartbeat.yml
+++ b/.github/workflows/supabase-heartbeat.yml
@@ -2,8 +2,7 @@ name: Supabase Heartbeat
 
 on:
   schedule:
-    # Cron GitHub Actions è in UTC
-    - cron: "0 7 * * 1,5"   # Lun e Ven 07:00 UTC
+    - cron: "13 7 * * 1,5"
   workflow_dispatch:
 
 permissions:
@@ -13,44 +12,21 @@ jobs:
   ping:
     runs-on: ubuntu-latest
     timeout-minutes: 5
-
     steps:
-      - name: Call Supabase Edge Function heartbeat
+      - name: Ping Supabase heartbeat
         shell: bash
         env:
           HEARTBEAT_URL: ${{ secrets.HEARTBEAT_URL }}
           HEARTBEAT_SECRET: ${{ secrets.HEARTBEAT_SECRET }}
-          # Opzionale: se "Verify JWT" è ON sulla function, imposta anche questo secret in GitHub
-          SUPABASE_ANON_KEY: ${{ secrets.SUPABASE_ANON_KEY }}
         run: |
           set -euo pipefail
 
-          if [[ -z "${HEARTBEAT_URL:-}" ]]; then
-            echo "Missing HEARTBEAT_URL secret"
-            exit 1
-          fi
-
-          if [[ -z "${HEARTBEAT_SECRET:-}" ]]; then
-            echo "Missing HEARTBEAT_SECRET secret"
-            exit 1
-          fi
+          : "${HEARTBEAT_URL:?Missing HEARTBEAT_URL secret}"
+          : "${HEARTBEAT_SECRET:?Missing HEARTBEAT_SECRET secret}"
 
           headers_file="$(mktemp)"
           body_file="$(mktemp)"
-
-          # Costruzione headers curl
-          curl_headers=(
-            -H "x-heartbeat-secret: ${HEARTBEAT_SECRET}"
-            -H "Accept: text/plain"
-          )
-
-          # Se Verify JWT è ON, l'anon key funziona come Bearer JWT (opzionale)
-          if [[ -n "${SUPABASE_ANON_KEY:-}" ]]; then
-            curl_headers+=(
-              -H "apikey: ${SUPABASE_ANON_KEY}"
-              -H "Authorization: Bearer ${SUPABASE_ANON_KEY}"
-            )
-          fi
+          trap 'rm -f "$headers_file" "$body_file"' EXIT
 
           echo "Pinging: ${HEARTBEAT_URL}"
           http_code="$(curl -sS \
@@ -59,12 +35,13 @@ jobs:
             -D "${headers_file}" \
             -o "${body_file}" \
             -w "%{http_code}" \
-            "${curl_headers[@]}" \
+            -H "x-heartbeat-secret: ${HEARTBEAT_SECRET}" \
+            -H "Accept: text/plain" \
+            -H "User-Agent: github-actions-supabase-heartbeat" \
             "${HEARTBEAT_URL}"
           )"
 
           echo "HTTP ${http_code}"
-
           if [[ "${http_code}" != "200" ]]; then
             echo "---- Response headers ----"
             sed -n '1,80p' "${headers_file}" || true
